trunk/Archive2/05/6138fd14fd75e7/output
main.cpp:3:17: error: unknown type name ‘doesntexist’
 void myfunction(doesntexist argument)
                 ^
