trunk/Archive2/05/6138fd14fd75e7/main.cpp


void myfunction(doesntexist argument)
{
}


int main()
{
 return 0;
}
